Make scrollbar-gutter: stable; on body element to prevent horizontal overflow.

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ body {
 	background-position: right top;
 	background-repeat: no-repeat;
 	background-size: cover;
+	scrollbar-gutter: stable;
 }
 
 h2 {
